  now silenced.

- Issue #3890, #8222: Fix recv() and recv_into() on non-blocking SSL sockets.
  Also, enable the SSL_MODE_AUTO_RETRY flag on SSL sockets, so that blocking
  reads and writes are always retried by OpenSSL itself.

- Issue #6716/2: Backslash-replace error output in compilall.

Extension Modules
-----------------

- Issue #8105: Validate file descriptor passed to mmap.mmap on Windows.

- Issue #9422: Fix memory leak when re-initializing a struct.Struct object.

- Issue #7900: The getgroups(2) system call on MacOSX behaves rather oddly
  compared to other unix systems. In particular, os.getgroups() does
  not reflect any changes made using os.setgroups() but basicly always
  returns the same information as the id command.

  os.getgroups() can now return more than 16 groups on MacOSX.

- Issue #7384: If the system readline library is linked against
  ncurses, do not link the readline module against ncursesw. The
  additional restriction of linking the readline and curses modules
  against the same curses library is currently not enabled.

- Issue #8973: Add __all__ to struct module; this ensures that
  help(struct) includes documentation for the struct.Struct class.

- Issue #2810: Fix cases where the Windows registry API returns
  ERROR_MORE_DATA, requiring a re-try in order to get the complete result.

Build
-----

- Issue #3928: os.mknod() now available in Solaris, also.

- Issue #6716: Quote -x arguments of compileall in MSI installer.
  Exclude 2to3 tests from compileall.

- Issue #1628484: The Makefile doesn't ignore the CFLAGS environment
  variable anymore.  It also forwards the LDFLAGS settings to the linker
  when building a shared library.

Tests
-----

- Issue #9251: test_threaded_import didn't fail when run through regrtest
  if the import lock was disabled.

- Issue #7449: Skip test_socketserver if threading support is disabled

- Issue #8672: Add a zlib test ensuring that an incomplete stream can be